--- a/index.html
+++ b/index.html
@@ -52,44 +52,49 @@
         сконцентрироваться, особенно когда очень надо
       </p>
     </header>
-    <main class="content">
-      <section>
-        <h2>Почему сосредоточиться так сложно</h2>
-        <article>
-          <h3>Многозадачность</h3>
-          <p>
-            Особенно сложно сосредоточиться, когда задач много и все они —
-            важные. Где же легендарная многозадачность, когда она так нужна вам
-            (и всем нанимающим менеджерам этого мира)? А дело в том, что её
-            просто не существует. Исследователи
-            <a href="https://dana.org/news-and-insights/" target="_blank"
-              >выяснили</a
-            >, что мозгу тяжело концентрироваться даже на двух делах
-            одновременно. А когда в поле внимания попадает несколько важных
-            задач, организм паникует и выделяет кортизол и адреналин — «гормоны
-            стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
-            устаём.
-          </p>
-        </article>
-        <article>
-          <h3>Дофамин</h3>
-          <p>
-            С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
-            невозможности сосредоточиться замешана и полная противоположность
-            стрессу — дофамин. Это вещество участвует в системе вознаграждения
-            мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на
-            что-то более «приятное» для мозгов. Например, смотрим лайки в
-            соцсетях. В это время и выделяется дофамин — и мы чувствуем
-            удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
-            тем больше удовольствия получаешь.
-          </p>
-        </article>
+    <main class="main">
+      <section class="group">
+        <h2 class="group__title">Почему сосредоточиться так сложно</h2>
+        <div class="content">
+          <article class="article">
+            <h3 class="article__title">Многозадачность</h3>
+            <p class="article__content">
+              Особенно сложно сосредоточиться, когда задач много и все они —
+              важные. Где же легендарная многозадачность, когда она так нужна
+              вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+              её просто не существует. Исследователи
+              <a
+                href="https://dana.org/news-and-insights/"
+                target="_blank"
+                class="article__link"
+                >выяснили</a
+              >, что мозгу тяжело концентрироваться даже на двух делах
+              одновременно. А когда в поле внимания попадает несколько важных
+              задач, организм паникует и выделяет кортизол и адреналин —
+              «гормоны стресса». Из-за этого мы работаем невнимательно:
+              ошибаемся и быстро устаём.
+            </p>
+          </article>
+          <article class="article">
+            <h3 class="article__title">Дофамин</h3>
+            <p class="article__content">
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+              нашей невозможности сосредоточиться замешана и полная
+              противоположность стрессу — дофамин. Это вещество участвует в
+              системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
+              от важной задачи на что-то более «приятное» для мозгов. Например,
+              смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
+              чувствуем удовольствие. Получается замкнутый круг: чем больше
+              отвлекаешься, тем больше удовольствия получаешь.
+            </p>
+          </article>
+        </div>
       </section>
-      <section>
-        <h2>Что снижает концентрацию внимания?</h2>
-        <article>
-          <h3>Многозадачность</h3>
-          <p>
+      <section class="group">
+        <h2 class="group__title">Что снижает концентрацию внимания?</h2>
+        <article class="article">
+          <h3 class="article__title">Многозадачность</h3>
+          <p class="article__content">
             Как концентрация может снижаться из-за… концентрации? Любая
             стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
             мозг постоянно «сканировать» окружающую среду на предмет опасности.
@@ -98,9 +103,9 @@
             не давать ей отдохнуть.
           </p>
         </article>
-        <article>
-          <h3>Еда</h3>
-          <p>
+        <article class="article">
+          <h3 class="article__title">Еда</h3>
+          <p class="article__content">
             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
             доставляют в мозг энергию и помогают ему лучше работать. Но уходит
             эта энергия также быстро, как и приходит. А мы в результате попадаем
@@ -109,9 +114,9 @@
             больше быстрых углеводов.
           </p>
         </article>
-        <article>
-          <h3>Гаджеты</h3>
-          <p>
+        <article class="article">
+          <h3 class="article__title">Гаджеты</h3>
+          <p class="article__content">
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в
             наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
             утятами. В результате мозг пытается переключиться с одной задачи на
@@ -122,15 +127,15 @@
           </p>
         </article>
       </section>
-      <section>
-        <h2>
+      <section class="group">
+        <h2 class="group__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <p>5 простых (на самом деле не очень) советов</p>
-        <article>
-          <h3>Представьте небо и облака</h3>
-          <p>
+        <h3 class="article__title">5 простых (на самом деле не очень) советов</h3>
+        <article class="article">
+          <h4 class="article__subtitle">Представьте небо и облака</h4>
+          <p class="article__content">
             Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
             успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
             раз и мешают эти сложные задачи делать. В такие моменты можно
@@ -141,22 +146,23 @@
             проблемах из будущего.
           </p>
         </article>
-        <article>
-          <h3>Включите музыку</h3>
-          <p>
+        <article class="article">
+          <h4 class="article__subtitle">Включите музыку</h4>
+          <p class="article__content">
             Но не любую, и не любимую. Любимая может быть связана с сильными
             положительными эмоциями, которые тоже очень сильно отвлекают.
             Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
             попробовать включить плейлист с «белым шумом» или нейромузыкой.
           </p>
         </article>
-        <article>
-          <h3>Прогуляйтесь</h3>
-          <p>
+        <article class="article">
+          <h4 class="article__subtitle">Прогуляйтесь</h4>
+          <p class="article__content">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
             <a
               href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
               target="_blank"
+              class="article__link"
               >показал</a
             >, что созерцание природы повышает концентрацию, в то время как
             после просмотра городских пейзажей она наоборот понижается. Можно
@@ -165,18 +171,18 @@
             простая двадцатиминутная прогулка — тоже отличный вариант.
           </p>
         </article>
-        <article>
-          <h3>Хорошо ешьте</h3>
-          <p>
+        <article class="article">
+          <h4 class="article__subtitle">Хорошо ешьте</h4>
+          <p class="article__content">
             Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
             которые препятствуют резким скачкам сахара в крови. Например, с
             высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
             фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
           </p>
         </article>
-        <article>
-          <h3>Читайте</h3>
-          <p>
+        <article class="article">
+          <h3 class="article__title">Читайте</h3>
+          <p class="article__content">
             Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
             прочитать пост в соцсети, достаточно нескольких минут или даже
             секунд. А вот интересная книга способна затянуть и на несколько
@@ -184,14 +190,18 @@
           </p>
         </article>
       </section>
-      <section>
-        <h2>А можно в картинках?</h2>
-        <img src="./images/sunset.png" alt="Закат" loading="lazy" />
-        <img src="./images/ice-cream.png" alt="Мороженое" loading="lazy" />
-        <img src="./images/tape.png" alt="Кассета" loading="lazy" />
-        <img src="./images/books.png" alt="Книги" loading="lazy" />
-        <img src="./images/street.png" alt="Улица" loading="lazy" />
+      
+      <section class="article">
+        <h2 class="article__title">А можно в картинках?</h2>
+        <img class="image" src="./images/sunset.png" alt="Закат" loading="lazy" />
+        <img class="image" src="./images/ice-cream.png" alt="Мороженое" loading="lazy" />
+        <img class="image" src="./images/tape.png" alt="Кассета" loading="lazy" />
+        <img class="image" src="./images/books.png" alt="Книги" loading="lazy" />
+        <img class="image" src="./images/street.png" alt="Улица" loading="lazy" />
       </section>
     </main>
+    <footer class="footer decorated-zone">
+      <h2 class="footer__title">focus</h2>
+    </footer>
   </body>
 </html>
