--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
           </li>
         </ul>
       </nav>
-      <h1 class="header__title">no focus</h1>
+      <h1 class="title header__title">no focus</h1>
       <p class="header__description title-decor">
         Что делать, когда не можешь делать ничего<br />Или почему нам так сложно
         сконцентрироваться, особенно когда очень надо
       </p>
     </header>
     <main class="main">
-      <section class="group group_why">
+      <section class="group group_text group_why">
         <h2 class="group__title">Почему сосредоточиться так сложно</h2>
         <div class="content">
           <article class="article">
@@ -91,7 +91,7 @@
           </article>
         </div>
       </section>
-      <section class="group group_what">
+      <section class="group group_text group_what">
         <h2 class="group__title">Что снижает концентрацию внимания?</h2>
         <div class="content">
           <article class="article">
@@ -130,7 +130,7 @@
           </article>
         </div>
       </section>
-      <section class="group group_how">
+      <section class="group group_text group_how">
         <h2 class="group__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
@@ -187,7 +187,7 @@
             </p>
           </article>
           <article class="article">
-            <h3 class="article__title">Читайте</h3>
+            <h4 class="article__subtitle">Читайте</h4>
             <p class="article__content">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или
@@ -197,46 +197,54 @@
           </article>
         </div>
       </section>
-      <section class="group">
-      <div class="article article__images">
+      <section class="group article article__images">
         <h2 class="article__title">А можно в картинках?</h2>
-        <div class="images">
-        <img
-          class="image image_sunset"
-          src="./images/sunset.png"
-          alt="Закат"
-          loading="lazy"
-        />
-        <img
-          class="image image_icecream"
-          src="./images/ice-cream.png"
-          alt="Мороженое"
-          loading="lazy"
-        />
-        <img
-          class="image image_tape"
-          src="./images/tape.png"
-          alt="Кассета"
-          loading="lazy"
-        />
-        <img
-          class="image"
-          src="./images/books.png"
-          alt="Книги"
-          loading="lazy"
-        />
-        <img
-          class="image image_street"
-          src="./images/street.png"
-          alt="Улица"
-          loading="lazy"
-        />
-      </div>
-      </div>
-    </section>
+        <ul class="images">
+          <li class="image_sunset">
+            <img
+              class="image"
+              src="./images/sunset.png"
+              alt="Закат"
+              loading="lazy"
+            />
+          </li>
+          <li class="image_icecream">
+            <img
+              class="image"
+              src="./images/ice-cream.png"
+              alt="Мороженое"
+              loading="lazy"
+            />
+          </li>
+          <li class="image_tape">
+            <img
+              class="image"
+              src="./images/tape.png"
+              alt="Кассета"
+              loading="lazy"
+            />
+          </li>
+          <li class="image_books">
+            <img
+              class="image image_item"
+              src="./images/books.png"
+              alt="Книги"
+              loading="lazy"
+            />
+          </li>
+          <li class="image_street">
+            <img
+              class="image "
+              src="./images/street.png"
+              alt="Улица"
+              loading="lazy"
+            />
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer decorated-zone">
-      <h2 class="footer__title">focus</h2>
+      <h2 class="title footer__title">focus</h2>
     </footer>
   </body>
 </html>
