--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     </header>
     <main class="main">
       <section class="group group_text group_why">
-        <h2 class="group__title">Почему сосредоточиться так сложно</h2>
+        <h2 class="content__title group__title">Почему сосредоточиться так сложно</h2>
         <div class="content">
           <article class="article">
-            <h3 class="article__title">Многозадачность</h3>
+            <h3 class="content__title article__title">Многозадачность</h3>
             <p class="article__content">
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
@@ -77,7 +77,7 @@
             </p>
           </article>
           <article class="article">
-            <h3 class="article__title">Дофамин</h3>
+            <h3 class="content__title article__title">Дофамин</h3>
             <p class="article__content">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
               нашей невозможности сосредоточиться замешана и полная
@@ -92,10 +92,10 @@
         </div>
       </section>
       <section class="group group_text group_what">
-        <h2 class="group__title">Что снижает концентрацию внимания?</h2>
+        <h2 class="content__title group__title">Что снижает концентрацию внимания?</h2>
         <div class="content">
           <article class="article">
-            <h3 class="article__title">Многозадачность</h3>
+            <h3 class="content__title article__title">Многозадачность</h3>
             <p class="article__content">
               Как концентрация может снижаться из-за… концентрации? Любая
               стрессовая ситуация (и резко меняющийся мир в целом) заставляет
@@ -106,7 +106,7 @@
             </p>
           </article>
           <article class="article">
-            <h3 class="article__title">Еда</h3>
+            <h3 class="content__title article__title">Еда</h3>
             <p class="article__content">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
               доставляют в мозг энергию и помогают ему лучше работать. Но уходит
@@ -117,7 +117,7 @@
             </p>
           </article>
           <article class="article">
-            <h3 class="article__title">Гаджеты</h3>
+            <h3 class="content__title article__title">Гаджеты</h3>
             <p class="article__content">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
               наушниках — подкаст, а на компьютере фоном — ещё и видео с
@@ -131,16 +131,16 @@
         </div>
       </section>
       <section class="group group_text group_how">
-        <h2 class="group__title">
+        <h2 class="content__title group__title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
         <div class="content">
-          <h3 class="article__title">
+          <h3 class="content__title article__title">
             5 простых (на самом деле не очень) советов
           </h3>
           <article class="article">
-            <h4 class="article__subtitle">Представьте небо и облака</h4>
+            <h4 class="content__title article__title article__title-small">Представьте небо и облака</h4>
             <p class="article__content">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
               успокоиться. Ведь часто именно тревожные мысли о сложных задачах
@@ -153,7 +153,7 @@
             </p>
           </article>
           <article class="article">
-            <h4 class="article__subtitle">Включите музыку</h4>
+            <h4 class="content__title article__title article__title-small">Включите музыку</h4>
             <p class="article__content">
               Но не любую, и не любимую. Любимая может быть связана с сильными
               положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -162,7 +162,7 @@
             </p>
           </article>
           <article class="article">
-            <h4 class="article__subtitle">Прогуляйтесь</h4>
+            <h4 class="content__title article__title article__title-small">Прогуляйтесь</h4>
             <p class="article__content">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
               <a
@@ -178,7 +178,7 @@
             </p>
           </article>
           <article class="article">
-            <h4 class="article__subtitle">Хорошо ешьте</h4>
+            <h4 class="content__title article__title article__title-small">Хорошо ешьте</h4>
             <p class="article__content">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
@@ -187,7 +187,7 @@
             </p>
           </article>
           <article class="article">
-            <h4 class="article__subtitle">Читайте</h4>
+            <h4 class="content__title article__title article__title-small">Читайте</h4>
             <p class="article__content">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или
@@ -198,7 +198,7 @@
         </div>
       </section>
       <section class="group article article__images">
-        <h2 class="article__title">А можно в картинках?</h2>
+        <h2 class="content__title article__title">А можно в картинках?</h2>
         <ul class="images">
           <li class="image_sunset">
             <img
